keep the searched location

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ function getWeather(myposition) {
             $('#weather').html('<p>' + error + '</p>');
         }
     });
-
+	defaultLocal = myposition;
 };
 
 
