better chart.js

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 <div id="graph">
 	<div id="chartTemperature">
 		<div id="tempTitle">Temperature (°C)</div>
-		<canvas id="myChartTemp"  height="200"></canvas>
+		<canvas id="myChartTemp"  width="200"></canvas>
 	</div> 
 	<div id="chartHumidity">
 		<div id="humTitle">Humidity (%)</div>
-		<canvas id="myChartHum" height="200"></canvas>
+		<canvas id="myChartHum" width="200"></canvas>
 	</div> 
 	<div id="chartPressure">
 		<div id="presTitle">Pressure (mbar)</div>
-		<canvas id="myChartPres" height="200"></canvas>
+		<canvas id="myChartPres" width="200"></canvas>
 	</div> 
 </div>
 -->
